# managed-quiz-bot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  main.py  pebble-python-config.json  pyproject.toml  requirements-no-ver.txt  requirements.txt
cogs/: dev.py  questions.py  quiz.py  settings.py  stats.py
cogs/descriptions/: questions.py  quiz.py  settings.py  stats.py
cogs/enum/: embed_type.py
cogs/util/: ctx_interaction_check.py  database_interactions.py  embed_generator.py  macro.py
cogs/util/autocomplete/: quiz_type.py
