[tool.poetry]
name = "managed-quiz-bot"
version = "0.1.0"
description = ""
authors = ["Vile"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.16"
discord-py = "^2.4.0"
python-dotenv = "^1.0.1"
asqlite = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
